# Kusanagi

./: Cargo.toml  Dockerfile  README.md  ROADMAP.md  index.html  openobserve-alerts.md  openobserve-dashboard.json
.github/workflows/: docker-build.yml
agent_proposals/: README.md
src/: alertmanager.rs  apps.rs  argocd.rs  backups.rs  chat.rs  chat_storage.rs  cilium.rs  cluster.rs  events.rs  export.rs  ingress.rs  main.rs  mcp.rs  nodes.rs  pods.rs  prometheus.rs  services.rs  storage.rs  telemetry.rs  ws.rs
static/: index.html
static/css/: cyberpunk.css
static/js/: api-tracker.js  dashboard.js  error-boundary.js  network.js  rum.js
