[package]
name = "kusanagi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-web-actors = "4.2"
actix = "0.13"
actix-files = "0.6"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"
reqwest = { version = "0.11", features = ["json"] }
http = "0.2"
aws-config = "1.1.5"
aws-sdk-s3 = "1.15.0"

